boiler-macros/tests/ui/action_meta_fail.stderr
error: ActionMeta can only be derived for types ending with 'Action'
 --> tests/ui/action_meta_fail.rs:5:8
  |
5 | struct RustCiFailure;
  |        ^^^^^^^^^^^^^
