boiler-macros/tests/ui/action_meta_fail.rs
use boiler_macros::ActionMeta;

/// Generates GitHub Actions config for Rust projects
#[derive(ActionMeta)]
struct RustCiFailure;

fn main() {}
